// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`commandLine > \`$ \` is not command 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "$ ",
        "text": "$ ",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`commandLine > \`$\` is not command 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "$",
        "text": "$",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`commandLine > \`$s\` is not command 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "$not command",
        "text": "$not command",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`commandLine > Simple command with $ 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "$ command",
        "symbol": "$",
        "text": "command",
        "type": "commandLine",
      },
    ],
    "type": "line",
  },
]
`;

exports[`commandLine > Simple command with % 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "% command",
        "symbol": "%",
        "text": "command",
        "type": "commandLine",
      },
    ],
    "type": "line",
  },
]
`;
